<resources>
    <string name="app_name">My First App</string>
    <string name="send_button">Enviar</string>
    <string name="clear_button">Limpiar</string>
    <string name="name_input">Digite un nombre...</string>
    <string name="last_name_input">Digite un apellido...</string>
    <string name="gender_label">Género</string>
    <string name="date_of_birth_label">Fecha de nacimiento</string>
    <string name="programming_preference_label">¿Le gusta programar?</string>
    <string name="language">Lenguaje</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>

    <string-array name="gender_array">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

</resources>